--- a/package.json
+++ b/package.json
@@ -1,13 +1,159 @@
 {
-  "name": "@version.1/source",
+  "name": "beamify",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@angular/animations": "~18.2.0",
+    "@angular/cdk": "^18.2.4",
+    "@angular/common": "~18.2.0",
+    "@angular/compiler": "~18.2.0",
+    "@angular/core": "~18.2.0",
+    "@angular/forms": "~18.2.0",
+    "@angular/material": "^18.2.4",
+    "@angular/platform-browser": "~18.2.0",
+    "@angular/platform-browser-dynamic": "~18.2.0",
+    "@angular/router": "~18.2.0",
+    "@apollo/server": "^4.11.0",
+    "@casl/ability": "^6.7.1",
+    "@grpc/grpc-js": "^1.11.2",
+    "@grpc/proto-loader": "^0.7.13",
+    "@nestjs/apollo": "^12.2.0",
+    "@nestjs/axios": "^3.0.3",
+    "@nestjs/bull": "^10.2.1",
+    "@nestjs/bullmq": "^10.2.1",
+    "@nestjs/cache-manager": "^2.2.2",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/cqrs": "^10.2.7",
+    "@nestjs/event-emitter": "^2.0.4",
+    "@nestjs/graphql": "^12.2.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/microservices": "^10.4.2",
+    "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-socket.io": "^10.4.2",
+    "@nestjs/schedule": "^4.1.1",
+    "@nestjs/swagger": "^7.4.1",
+    "@nestjs/terminus": "^10.2.3",
+    "@nestjs/throttler": "^6.2.1",
+    "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.4.2",
+    "@nx/angular": "^19.7.2",
+    "@nx/cypress": "^19.7.2",
+    "@nx/detox": "^19.7.2",
+    "@nx/esbuild": "^19.7.2",
+    "@nx/expo": "^19.7.2",
+    "@nx/express": "^19.7.2",
+    "@nx/gradle": "^19.7.2",
+    "@nx/nest": "^19.7.2",
+    "@nx/next": "^19.7.2",
+    "@nx/nuxt": "^19.7.2",
+    "@nx/plugin": "^19.7.2",
+    "@nx/react": "^19.7.2",
+    "@nx/react-native": "^19.7.2",
+    "@nx/remix": "^19.7.2",
+    "@nx/rollup": "^19.7.2",
+    "@nx/storybook": "^19.7.2",
+    "@nx/vite": "^19.7.2",
+    "@nx/vue": "^19.7.2",
+    "@nx/web": "^19.7.2",
+    "@nx/webpack": "^19.7.2",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "bull": "^4.16.3",
+    "bullmq": "^5.13.0",
+    "cache-manager": "^5.7.6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express-session": "^1.18.0",
+    "graphql": "^16.9.0",
+    "hads": "^3.0.3",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.4.1",
+    "joi": "^17.13.3",
+    "js-yaml": "^4.1.0",
+    "kafkajs": "^2.2.4",
+    "mongoose": "^8.6.2",
+    "mqtt": "^5.10.1",
+    "mysql2": "^3.11.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.20",
+    "zone.js": "~0.14.3"
+  },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~18.2.0",
+    "@angular-devkit/core": "~18.2.0",
+    "@angular-devkit/schematics": "~18.2.0",
+    "@angular-eslint/eslint-plugin": "^18.0.1",
+    "@angular-eslint/eslint-plugin-template": "^18.0.1",
+    "@angular-eslint/template-parser": "^18.0.1",
+    "@angular/cli": "~18.2.0",
+    "@angular/compiler-cli": "~18.2.0",
+    "@angular/language-service": "~18.2.0",
+    "@automock/adapters.nestjs": "^2.1.0",
+    "@automock/jest": "^2.1.0",
+    "@compodoc/compodoc": "^1.1.25",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nx-tools/container-metadata": "^6.0.2",
+    "@nx-tools/nx-container": "^6.0.2",
+    "@nx/eslint": "19.7.2",
+    "@nx/eslint-plugin": "19.7.2",
+    "@nx/jest": "19.7.2",
     "@nx/js": "19.7.2",
+    "@nx/node": "19.7.2",
     "@nx/workspace": "19.7.2",
-    "nx": "19.7.2"
+    "@schematics/angular": "~18.2.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express-session": "^1.18.0",
+    "@types/jest": "^29.5.12",
+    "@types/js-yaml": "^4.0.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "~18.16.9",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/utils": "^7.16.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jest-preset-angular": "~14.1.0",
+    "nx": "19.7.2",
+    "postcss": "^8.4.5",
+    "prettier": "^2.6.2",
+    "run-script-webpack-plugin": "^0.2.0",
+    "tailwindcss": "^3.0.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.5.2",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
